<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASCII Camera</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Open Camera</string>
    <string name="gallery">View Gallery</string>
    <string name="about">About</string>
    
    <string name="abouttext">UNI DESIGN.</string>
	<string name="pickq">Select quality</string>
	<string name="gentxt">Generate text (txt)</string>
	<string name="genjpg">Generate picture (jpg)</string>
    <string name="gen">Generate</string>
    
    <color name="white">#FFFFFF</color>

    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_generate">Generate</string>

</resources>
