<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  		android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
    <ImageView
        android:id="@+id/bitmap"
        android:layout_marginTop="20dp"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="250dip"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" android:contentDescription="@string/app_name"/>
    
    <TextView
        android:id="@+id/pickq"
        android:layout_below="@id/bitmap"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="serif"
        android:text="@string/pickq" />

    <LinearLayout
        android:id="@+id/quality"
        android:orientation = "horizontal"
       	android:layout_marginTop="20dp"
        android:layout_below="@id/pickq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <SeekBar
        	android:id="@+id/seekBar1"
        	android:max="9"
        	android:progress="2"
            android:layout_weight="4"
        	android:layout_width="0dip"
        	android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/qnum"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textSize="16sp"
        	android:typeface="serif" />
        
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/checkBox1"
        android:checked="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="serif"
        android:layout_alignLeft="@id/quality"
        android:layout_below="@id/quality"
        android:text="@string/gentxt" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="serif"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:text="@string/genjpg" />

    <TextView
        android:id="@+id/button1"
        android:background="@drawable/textview_border"
        android:layout_centerHorizontal="true"
        android:onClick="act"
        android:layout_marginTop="22dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:typeface="serif"
        android:layout_below="@id/checkBox2"
        android:text="@string/gen" />

</RelativeLayout>
</ScrollView>
